[package]
name = "more_hands_on_rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = ["hello-bevy", "my_librairy", "my_pig"]

[workspace.dependencies]
bevy = "0.16.0"
bevy_egui = "0.34.1"
anyhow = "1"
rand = "0.8"
rand_pcg = { version = "0.3" }
rand_xorshift = { version = "0.3" }
